// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatronLoans tests should load the details component 1`] = `
<Loader>
  <Error>
    <ResultsTable
      columns={
        Array [
          Object {
            "formatter": [Function],
            "title": "Loan request PID",
          },
          Object {
            "formatter": [Function],
            "title": "Document",
          },
          Object {
            "field": "metadata.request_start_date",
            "formatter": [Function],
            "title": "Request interest from",
          },
          Object {
            "field": "metadata.request_expire_date",
            "formatter": [Function],
            "title": "Request expires on",
          },
        ]
      }
      currentPage={1}
      data={Array []}
      headerActionComponent={null}
      name="loan requests"
      paginationComponent={null}
      seeAllComponent={
        <SeeAllButton
          disabled={false}
          fluid={false}
          to="/backoffice/loans?q=(patron_pid:2 AND state:(PENDING))"
        />
      }
      showAllResults={false}
      showMaxRows={5}
      singleLine={false}
      subtitle=""
      title=""
      totalHitsCount={0}
    />
  </Error>
</Loader>
`;

exports[`PatronLoans tests should render patron loans 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <PatronPendingLoans
      data={
        Object {
          "hits": Array [
            Object {
              "id": 1,
              "metadata": Object {
                "document": Object {
                  "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                  "abstract": "This is an abstract",
                  "authors": Array [
                    Object {
                      "full_name": "Jack E. Davis",
                    },
                  ],
                  "document_type": "BOOK",
                  "edition": "1",
                  "keywords": Object {
                    "source": "X",
                    "value": "Patata",
                  },
                  "languages": Array [
                    "en",
                  ],
                  "pid": "docid-1",
                  "publication_year": "1950",
                  "title": "The Gulf: The Making of An American Sea",
                },
                "document_pid": "docid-1",
                "end_date": "2018-07-28",
                "item_pid": Object {},
                "patron": Object {
                  "email": "patron1@test.ch",
                },
                "patron_pid": "1",
                "pickup_location_pid": "1",
                "pid": "loanid-1",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "PENDING",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan1",
            },
            Object {
              "id": 2,
              "metadata": Object {
                "document": Object {
                  "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                  "abstract": "This is an abstract",
                  "authors": Array [
                    Object {
                      "full_name": "Jack E. Davis",
                    },
                  ],
                  "document_type": "BOOK",
                  "edition": "1",
                  "keywords": Object {
                    "source": "X",
                    "value": "Patata",
                  },
                  "languages": Array [
                    "en",
                  ],
                  "pid": "docid-1",
                  "publication_year": "1950",
                  "title": "The Gulf: The Making of An American Sea",
                },
                "document_pid": "docid-1",
                "end_date": "2018-07-28",
                "item_pid": Object {
                  "type": "pitmid",
                  "value": "itemid-2",
                },
                "patron": Object {
                  "email": "patron2@test.ch",
                },
                "patron_pid": "1",
                "pickup_location_pid": "1",
                "pid": "loanid-2",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "PENDING",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan2",
            },
          ],
          "total": 2,
        }
      }
      fetchPatronPendingLoans={
        [MockFunction] {
          "calls": Array [
            Array [
              "2",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      loanState=""
      patronDetails={
        Object {
          "user_pid": "2",
        }
      }
      showMaxLoans={5}
    >
      <Loader>
        <Error>
          <ResultsTable
            columns={
              Array [
                Object {
                  "formatter": [Function],
                  "title": "Loan request PID",
                },
                Object {
                  "formatter": [Function],
                  "title": "Document",
                },
                Object {
                  "field": "metadata.request_start_date",
                  "formatter": [Function],
                  "title": "Request interest from",
                },
                Object {
                  "field": "metadata.request_expire_date",
                  "formatter": [Function],
                  "title": "Request expires on",
                },
              ]
            }
            currentPage={1}
            data={
              Array [
                Object {
                  "id": 1,
                  "metadata": Object {
                    "document": Object {
                      "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                      "abstract": "This is an abstract",
                      "authors": Array [
                        Object {
                          "full_name": "Jack E. Davis",
                        },
                      ],
                      "document_type": "BOOK",
                      "edition": "1",
                      "keywords": Object {
                        "source": "X",
                        "value": "Patata",
                      },
                      "languages": Array [
                        "en",
                      ],
                      "pid": "docid-1",
                      "publication_year": "1950",
                      "title": "The Gulf: The Making of An American Sea",
                    },
                    "document_pid": "docid-1",
                    "end_date": "2018-07-28",
                    "item_pid": Object {},
                    "patron": Object {
                      "email": "patron1@test.ch",
                    },
                    "patron_pid": "1",
                    "pickup_location_pid": "1",
                    "pid": "loanid-1",
                    "request_expire_date": "2019-06-28",
                    "request_start_date": "2018-06-28",
                    "start_date": "2018-06-28",
                    "state": "PENDING",
                    "transaction_date": "2018-06-29",
                    "transaction_location_pid": "1",
                  },
                  "pid": "loan1",
                },
                Object {
                  "id": 2,
                  "metadata": Object {
                    "document": Object {
                      "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                      "abstract": "This is an abstract",
                      "authors": Array [
                        Object {
                          "full_name": "Jack E. Davis",
                        },
                      ],
                      "document_type": "BOOK",
                      "edition": "1",
                      "keywords": Object {
                        "source": "X",
                        "value": "Patata",
                      },
                      "languages": Array [
                        "en",
                      ],
                      "pid": "docid-1",
                      "publication_year": "1950",
                      "title": "The Gulf: The Making of An American Sea",
                    },
                    "document_pid": "docid-1",
                    "end_date": "2018-07-28",
                    "item_pid": Object {
                      "type": "pitmid",
                      "value": "itemid-2",
                    },
                    "patron": Object {
                      "email": "patron2@test.ch",
                    },
                    "patron_pid": "1",
                    "pickup_location_pid": "1",
                    "pid": "loanid-2",
                    "request_expire_date": "2019-06-28",
                    "request_start_date": "2018-06-28",
                    "start_date": "2018-06-28",
                    "state": "PENDING",
                    "transaction_date": "2018-06-29",
                    "transaction_location_pid": "1",
                  },
                  "pid": "loan2",
                },
              ]
            }
            headerActionComponent={null}
            name="loan requests"
            paginationComponent={null}
            seeAllComponent={
              <SeeAllButton
                disabled={false}
                fluid={false}
                to="/backoffice/loans?q=(patron_pid:2 AND state:(PENDING))"
              />
            }
            showAllResults={false}
            showMaxRows={5}
            singleLine={false}
            subtitle=""
            title=""
            totalHitsCount={2}
          >
            <Table
              as="table"
              compact={true}
              name="loan requests"
              selectable={true}
              striped={true}
              subtitle=""
              title=""
              unstackable={true}
            >
              <table
                className="ui selectable striped unstackable compact table"
                name="loan requests"
                subtitle=""
                title=""
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      Object {
                        "formatter": [Function],
                        "title": "Loan request PID",
                      },
                      Object {
                        "formatter": [Function],
                        "title": "Document",
                      },
                      Object {
                        "field": "metadata.request_start_date",
                        "formatter": [Function],
                        "title": "Request interest from",
                      },
                      Object {
                        "field": "metadata.request_expire_date",
                        "formatter": [Function],
                        "title": "Request expires on",
                      },
                    ]
                  }
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                            key="Loan request PID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Loan request PID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Document"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Document
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Request interest from"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Request interest from
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Request expires on"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Request expires on
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      Object {
                        "formatter": [Function],
                        "title": "Loan request PID",
                      },
                      Object {
                        "formatter": [Function],
                        "title": "Document",
                      },
                      Object {
                        "field": "metadata.request_start_date",
                        "formatter": [Function],
                        "title": "Request interest from",
                      },
                      Object {
                        "field": "metadata.request_expire_date",
                        "formatter": [Function],
                        "title": "Request expires on",
                      },
                    ]
                  }
                  rows={
                    Array [
                      Object {
                        "id": 1,
                        "metadata": Object {
                          "document": Object {
                            "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                            "abstract": "This is an abstract",
                            "authors": Array [
                              Object {
                                "full_name": "Jack E. Davis",
                              },
                            ],
                            "document_type": "BOOK",
                            "edition": "1",
                            "keywords": Object {
                              "source": "X",
                              "value": "Patata",
                            },
                            "languages": Array [
                              "en",
                            ],
                            "pid": "docid-1",
                            "publication_year": "1950",
                            "title": "The Gulf: The Making of An American Sea",
                          },
                          "document_pid": "docid-1",
                          "end_date": "2018-07-28",
                          "item_pid": Object {},
                          "patron": Object {
                            "email": "patron1@test.ch",
                          },
                          "patron_pid": "1",
                          "pickup_location_pid": "1",
                          "pid": "loanid-1",
                          "request_expire_date": "2019-06-28",
                          "request_start_date": "2018-06-28",
                          "start_date": "2018-06-28",
                          "state": "PENDING",
                          "transaction_date": "2018-06-29",
                          "transaction_location_pid": "1",
                        },
                        "pid": "loan1",
                      },
                      Object {
                        "id": 2,
                        "metadata": Object {
                          "document": Object {
                            "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                            "abstract": "This is an abstract",
                            "authors": Array [
                              Object {
                                "full_name": "Jack E. Davis",
                              },
                            ],
                            "document_type": "BOOK",
                            "edition": "1",
                            "keywords": Object {
                              "source": "X",
                              "value": "Patata",
                            },
                            "languages": Array [
                              "en",
                            ],
                            "pid": "docid-1",
                            "publication_year": "1950",
                            "title": "The Gulf: The Making of An American Sea",
                          },
                          "document_pid": "docid-1",
                          "end_date": "2018-07-28",
                          "item_pid": Object {
                            "type": "pitmid",
                            "value": "itemid-2",
                          },
                          "patron": Object {
                            "email": "patron2@test.ch",
                          },
                          "patron_pid": "1",
                          "pickup_location_pid": "1",
                          "pid": "loanid-2",
                          "request_expire_date": "2019-06-28",
                          "request_start_date": "2018-06-28",
                          "start_date": "2018-06-28",
                          "state": "PENDING",
                          "transaction_date": "2018-06-29",
                          "transaction_location_pid": "1",
                        },
                        "pid": "loan2",
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan1"
                        key="loan1"
                      >
                        <tr
                          className=""
                          data-test="loan1"
                        >
                          <TableCell
                            as="td"
                            data-label="Loan request PID"
                            data-test="0-loan1"
                            key="0-loan1"
                          >
                            <td
                              className=""
                              data-label="Loan request PID"
                              data-test="0-loan1"
                            >
                              <Link
                                data-test="loanid-1"
                                to="url/loanid-1"
                              >
                                <LinkAnchor
                                  data-test="loanid-1"
                                  href="/url/loanid-1"
                                  navigate={[Function]}
                                >
                                  <a
                                    data-test="loanid-1"
                                    href="/url/loanid-1"
                                    onClick={[Function]}
                                  >
                                    loanid-1
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Document"
                            data-test="1-loan1"
                            key="1-loan1"
                          >
                            <td
                              className=""
                              data-label="Document"
                              data-test="1-loan1"
                            >
                              <Link
                                data-test="loanid-1"
                                to="url/docid-1"
                              >
                                <LinkAnchor
                                  data-test="loanid-1"
                                  href="/url/docid-1"
                                  navigate={[Function]}
                                >
                                  <a
                                    data-test="loanid-1"
                                    href="/url/docid-1"
                                    onClick={[Function]}
                                  >
                                    <DocumentTitle
                                      metadata={
                                        Object {
                                          "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                                          "abstract": "This is an abstract",
                                          "authors": Array [
                                            Object {
                                              "full_name": "Jack E. Davis",
                                            },
                                          ],
                                          "document_type": "BOOK",
                                          "edition": "1",
                                          "keywords": Object {
                                            "source": "X",
                                            "value": "Patata",
                                          },
                                          "languages": Array [
                                            "en",
                                          ],
                                          "pid": "docid-1",
                                          "publication_year": "1950",
                                          "title": "The Gulf: The Making of An American Sea",
                                        }
                                      }
                                      titleOnly={false}
                                      truncate={false}
                                    >
                                      <div
                                        className="document-title"
                                      >
                                        The Gulf: The Making of An American Sea
                                         
                                        <EditionTitleCmp
                                          metadata={
                                            Object {
                                              "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                                              "abstract": "This is an abstract",
                                              "authors": Array [
                                                Object {
                                                  "full_name": "Jack E. Davis",
                                                },
                                              ],
                                              "document_type": "BOOK",
                                              "edition": "1",
                                              "keywords": Object {
                                                "source": "X",
                                                "value": "Patata",
                                              },
                                              "languages": Array [
                                                "en",
                                              ],
                                              "pid": "docid-1",
                                              "publication_year": "1950",
                                              "title": "The Gulf: The Making of An American Sea",
                                            }
                                          }
                                        >
                                          (
                                          <DocumentEdition
                                            metadata={
                                              Object {
                                                "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                                                "abstract": "This is an abstract",
                                                "authors": Array [
                                                  Object {
                                                    "full_name": "Jack E. Davis",
                                                  },
                                                ],
                                                "document_type": "BOOK",
                                                "edition": "1",
                                                "keywords": Object {
                                                  "source": "X",
                                                  "value": "Patata",
                                                },
                                                "languages": Array [
                                                  "en",
                                                ],
                                                "pid": "docid-1",
                                                "publication_year": "1950",
                                                "title": "The Gulf: The Making of An American Sea",
                                              }
                                            }
                                            withLabel={false}
                                          >
                                            ed. 1
                                          </DocumentEdition>
                                           - 
                                          1950
                                          )
                                        </EditionTitleCmp>
                                      </div>
                                    </DocumentTitle>
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Request interest from"
                            data-test="2-loan1"
                            key="2-loan1"
                          >
                            <td
                              className=""
                              data-label="Request interest from"
                              data-test="2-loan1"
                            >
                              2018-06-28
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Request expires on"
                            data-test="3-loan1"
                            key="3-loan1"
                          >
                            <td
                              className=""
                              data-label="Request expires on"
                              data-test="3-loan1"
                            >
                              2019-06-28
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan2"
                        key="loan2"
                      >
                        <tr
                          className=""
                          data-test="loan2"
                        >
                          <TableCell
                            as="td"
                            data-label="Loan request PID"
                            data-test="0-loan2"
                            key="0-loan2"
                          >
                            <td
                              className=""
                              data-label="Loan request PID"
                              data-test="0-loan2"
                            >
                              <Link
                                data-test="loanid-2"
                                to="url/loanid-2"
                              >
                                <LinkAnchor
                                  data-test="loanid-2"
                                  href="/url/loanid-2"
                                  navigate={[Function]}
                                >
                                  <a
                                    data-test="loanid-2"
                                    href="/url/loanid-2"
                                    onClick={[Function]}
                                  >
                                    loanid-2
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Document"
                            data-test="1-loan2"
                            key="1-loan2"
                          >
                            <td
                              className=""
                              data-label="Document"
                              data-test="1-loan2"
                            >
                              <Link
                                data-test="loanid-2"
                                to="url/docid-1"
                              >
                                <LinkAnchor
                                  data-test="loanid-2"
                                  href="/url/docid-1"
                                  navigate={[Function]}
                                >
                                  <a
                                    data-test="loanid-2"
                                    href="/url/docid-1"
                                    onClick={[Function]}
                                  >
                                    <DocumentTitle
                                      metadata={
                                        Object {
                                          "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                                          "abstract": "This is an abstract",
                                          "authors": Array [
                                            Object {
                                              "full_name": "Jack E. Davis",
                                            },
                                          ],
                                          "document_type": "BOOK",
                                          "edition": "1",
                                          "keywords": Object {
                                            "source": "X",
                                            "value": "Patata",
                                          },
                                          "languages": Array [
                                            "en",
                                          ],
                                          "pid": "docid-1",
                                          "publication_year": "1950",
                                          "title": "The Gulf: The Making of An American Sea",
                                        }
                                      }
                                      titleOnly={false}
                                      truncate={false}
                                    >
                                      <div
                                        className="document-title"
                                      >
                                        The Gulf: The Making of An American Sea
                                         
                                        <EditionTitleCmp
                                          metadata={
                                            Object {
                                              "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                                              "abstract": "This is an abstract",
                                              "authors": Array [
                                                Object {
                                                  "full_name": "Jack E. Davis",
                                                },
                                              ],
                                              "document_type": "BOOK",
                                              "edition": "1",
                                              "keywords": Object {
                                                "source": "X",
                                                "value": "Patata",
                                              },
                                              "languages": Array [
                                                "en",
                                              ],
                                              "pid": "docid-1",
                                              "publication_year": "1950",
                                              "title": "The Gulf: The Making of An American Sea",
                                            }
                                          }
                                        >
                                          (
                                          <DocumentEdition
                                            metadata={
                                              Object {
                                                "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                                                "abstract": "This is an abstract",
                                                "authors": Array [
                                                  Object {
                                                    "full_name": "Jack E. Davis",
                                                  },
                                                ],
                                                "document_type": "BOOK",
                                                "edition": "1",
                                                "keywords": Object {
                                                  "source": "X",
                                                  "value": "Patata",
                                                },
                                                "languages": Array [
                                                  "en",
                                                ],
                                                "pid": "docid-1",
                                                "publication_year": "1950",
                                                "title": "The Gulf: The Making of An American Sea",
                                              }
                                            }
                                            withLabel={false}
                                          >
                                            ed. 1
                                          </DocumentEdition>
                                           - 
                                          1950
                                          )
                                        </EditionTitleCmp>
                                      </div>
                                    </DocumentTitle>
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Request interest from"
                            data-test="2-loan2"
                            key="2-loan2"
                          >
                            <td
                              className=""
                              data-label="Request interest from"
                              data-test="2-loan2"
                            >
                              2018-06-28
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Request expires on"
                            data-test="3-loan2"
                            key="3-loan2"
                          >
                            <td
                              className=""
                              data-label="Request expires on"
                              data-test="3-loan2"
                            >
                              2019-06-28
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={4}
                  currentPage={1}
                  paginationComponent={null}
                  seeAllComponent={
                    <SeeAllButton
                      disabled={false}
                      fluid={false}
                      to="/backoffice/loans?q=(patron_pid:2 AND state:(PENDING))"
                    />
                  }
                  showAllResults={false}
                  showMaxRows={5}
                />
              </table>
            </Table>
          </ResultsTable>
        </Error>
      </Loader>
    </PatronPendingLoans>
  </Router>
</BrowserRouter>
`;

exports[`PatronLoans tests should render show a message with no user loans 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <PatronPendingLoans
      data={
        Object {
          "hits": Array [],
          "total": 0,
        }
      }
      fetchPatronPendingLoans={
        [MockFunction] {
          "calls": Array [
            Array [
              "2",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      loanState=""
      patronDetails={
        Object {
          "user_pid": "2",
        }
      }
      showMaxLoans={5}
    >
      <Loader>
        <Error>
          <ResultsTable
            columns={
              Array [
                Object {
                  "formatter": [Function],
                  "title": "Loan request PID",
                },
                Object {
                  "formatter": [Function],
                  "title": "Document",
                },
                Object {
                  "field": "metadata.request_start_date",
                  "formatter": [Function],
                  "title": "Request interest from",
                },
                Object {
                  "field": "metadata.request_expire_date",
                  "formatter": [Function],
                  "title": "Request expires on",
                },
              ]
            }
            currentPage={1}
            data={Array []}
            headerActionComponent={null}
            name="loan requests"
            paginationComponent={null}
            seeAllComponent={
              <SeeAllButton
                disabled={false}
                fluid={false}
                to="/backoffice/loans?q=(patron_pid:2 AND state:(PENDING))"
              />
            }
            showAllResults={false}
            showMaxRows={5}
            singleLine={false}
            subtitle=""
            title=""
            totalHitsCount={0}
          >
            <Message
              data-test="no-results"
              icon={true}
              info={true}
            >
              <div
                className="ui icon info message"
                data-test="no-results"
              >
                <MessageContent>
                  <div
                    className="content"
                  >
                    <MessageHeader>
                      <div
                        className="header"
                      >
                        No results found
                      </div>
                    </MessageHeader>
                    There are no 
                    loan requests
                    .
                  </div>
                </MessageContent>
              </div>
            </Message>
          </ResultsTable>
        </Error>
      </Loader>
    </PatronPendingLoans>
  </Router>
</BrowserRouter>
`;

exports[`PatronLoans tests should render the see all button when showing only a few patron loans 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <PatronPendingLoans
      data={
        Object {
          "hits": Array [
            Object {
              "id": 1,
              "metadata": Object {
                "document": Object {
                  "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                  "abstract": "This is an abstract",
                  "authors": Array [
                    Object {
                      "full_name": "Jack E. Davis",
                    },
                  ],
                  "document_type": "BOOK",
                  "edition": "1",
                  "keywords": Object {
                    "source": "X",
                    "value": "Patata",
                  },
                  "languages": Array [
                    "en",
                  ],
                  "pid": "docid-1",
                  "publication_year": "1950",
                  "title": "The Gulf: The Making of An American Sea",
                },
                "document_pid": "docid-1",
                "end_date": "2018-07-28",
                "item_pid": Object {},
                "patron": Object {
                  "email": "patron1@test.ch",
                },
                "patron_pid": "1",
                "pickup_location_pid": "1",
                "pid": "loanid-1",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "PENDING",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan1",
            },
            Object {
              "id": 2,
              "metadata": Object {
                "document": Object {
                  "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                  "abstract": "This is an abstract",
                  "authors": Array [
                    Object {
                      "full_name": "Jack E. Davis",
                    },
                  ],
                  "document_type": "BOOK",
                  "edition": "1",
                  "keywords": Object {
                    "source": "X",
                    "value": "Patata",
                  },
                  "languages": Array [
                    "en",
                  ],
                  "pid": "docid-1",
                  "publication_year": "1950",
                  "title": "The Gulf: The Making of An American Sea",
                },
                "document_pid": "docid-1",
                "end_date": "2018-07-28",
                "item_pid": Object {
                  "type": "pitmid",
                  "value": "itemid-2",
                },
                "patron": Object {
                  "email": "patron2@test.ch",
                },
                "patron_pid": "1",
                "pickup_location_pid": "1",
                "pid": "loanid-2",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "PENDING",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan2",
            },
          ],
          "total": 2,
        }
      }
      fetchPatronPendingLoans={
        [MockFunction] {
          "calls": Array [
            Array [
              "2",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      patronDetails={
        Object {
          "user_pid": "2",
        }
      }
      showMaxLoans={1}
    >
      <Loader>
        <Error>
          <ResultsTable
            columns={
              Array [
                Object {
                  "formatter": [Function],
                  "title": "Loan request PID",
                },
                Object {
                  "formatter": [Function],
                  "title": "Document",
                },
                Object {
                  "field": "metadata.request_start_date",
                  "formatter": [Function],
                  "title": "Request interest from",
                },
                Object {
                  "field": "metadata.request_expire_date",
                  "formatter": [Function],
                  "title": "Request expires on",
                },
              ]
            }
            currentPage={1}
            data={
              Array [
                Object {
                  "id": 1,
                  "metadata": Object {
                    "document": Object {
                      "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                      "abstract": "This is an abstract",
                      "authors": Array [
                        Object {
                          "full_name": "Jack E. Davis",
                        },
                      ],
                      "document_type": "BOOK",
                      "edition": "1",
                      "keywords": Object {
                        "source": "X",
                        "value": "Patata",
                      },
                      "languages": Array [
                        "en",
                      ],
                      "pid": "docid-1",
                      "publication_year": "1950",
                      "title": "The Gulf: The Making of An American Sea",
                    },
                    "document_pid": "docid-1",
                    "end_date": "2018-07-28",
                    "item_pid": Object {},
                    "patron": Object {
                      "email": "patron1@test.ch",
                    },
                    "patron_pid": "1",
                    "pickup_location_pid": "1",
                    "pid": "loanid-1",
                    "request_expire_date": "2019-06-28",
                    "request_start_date": "2018-06-28",
                    "start_date": "2018-06-28",
                    "state": "PENDING",
                    "transaction_date": "2018-06-29",
                    "transaction_location_pid": "1",
                  },
                  "pid": "loan1",
                },
                Object {
                  "id": 2,
                  "metadata": Object {
                    "document": Object {
                      "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                      "abstract": "This is an abstract",
                      "authors": Array [
                        Object {
                          "full_name": "Jack E. Davis",
                        },
                      ],
                      "document_type": "BOOK",
                      "edition": "1",
                      "keywords": Object {
                        "source": "X",
                        "value": "Patata",
                      },
                      "languages": Array [
                        "en",
                      ],
                      "pid": "docid-1",
                      "publication_year": "1950",
                      "title": "The Gulf: The Making of An American Sea",
                    },
                    "document_pid": "docid-1",
                    "end_date": "2018-07-28",
                    "item_pid": Object {
                      "type": "pitmid",
                      "value": "itemid-2",
                    },
                    "patron": Object {
                      "email": "patron2@test.ch",
                    },
                    "patron_pid": "1",
                    "pickup_location_pid": "1",
                    "pid": "loanid-2",
                    "request_expire_date": "2019-06-28",
                    "request_start_date": "2018-06-28",
                    "start_date": "2018-06-28",
                    "state": "PENDING",
                    "transaction_date": "2018-06-29",
                    "transaction_location_pid": "1",
                  },
                  "pid": "loan2",
                },
              ]
            }
            headerActionComponent={null}
            name="loan requests"
            paginationComponent={null}
            seeAllComponent={
              <SeeAllButton
                disabled={false}
                fluid={false}
                to="/backoffice/loans?q=(patron_pid:2 AND state:(PENDING))"
              />
            }
            showAllResults={false}
            showMaxRows={1}
            singleLine={false}
            subtitle=""
            title=""
            totalHitsCount={2}
          >
            <Table
              as="table"
              compact={true}
              name="loan requests"
              selectable={true}
              striped={true}
              subtitle=""
              title=""
              unstackable={true}
            >
              <table
                className="ui selectable striped unstackable compact table"
                name="loan requests"
                subtitle=""
                title=""
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      Object {
                        "formatter": [Function],
                        "title": "Loan request PID",
                      },
                      Object {
                        "formatter": [Function],
                        "title": "Document",
                      },
                      Object {
                        "field": "metadata.request_start_date",
                        "formatter": [Function],
                        "title": "Request interest from",
                      },
                      Object {
                        "field": "metadata.request_expire_date",
                        "formatter": [Function],
                        "title": "Request expires on",
                      },
                    ]
                  }
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                            key="Loan request PID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Loan request PID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Document"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Document
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Request interest from"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Request interest from
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Request expires on"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Request expires on
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      Object {
                        "formatter": [Function],
                        "title": "Loan request PID",
                      },
                      Object {
                        "formatter": [Function],
                        "title": "Document",
                      },
                      Object {
                        "field": "metadata.request_start_date",
                        "formatter": [Function],
                        "title": "Request interest from",
                      },
                      Object {
                        "field": "metadata.request_expire_date",
                        "formatter": [Function],
                        "title": "Request expires on",
                      },
                    ]
                  }
                  rows={
                    Array [
                      Object {
                        "id": 1,
                        "metadata": Object {
                          "document": Object {
                            "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                            "abstract": "This is an abstract",
                            "authors": Array [
                              Object {
                                "full_name": "Jack E. Davis",
                              },
                            ],
                            "document_type": "BOOK",
                            "edition": "1",
                            "keywords": Object {
                              "source": "X",
                              "value": "Patata",
                            },
                            "languages": Array [
                              "en",
                            ],
                            "pid": "docid-1",
                            "publication_year": "1950",
                            "title": "The Gulf: The Making of An American Sea",
                          },
                          "document_pid": "docid-1",
                          "end_date": "2018-07-28",
                          "item_pid": Object {},
                          "patron": Object {
                            "email": "patron1@test.ch",
                          },
                          "patron_pid": "1",
                          "pickup_location_pid": "1",
                          "pid": "loanid-1",
                          "request_expire_date": "2019-06-28",
                          "request_start_date": "2018-06-28",
                          "start_date": "2018-06-28",
                          "state": "PENDING",
                          "transaction_date": "2018-06-29",
                          "transaction_location_pid": "1",
                        },
                        "pid": "loan1",
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan1"
                        key="loan1"
                      >
                        <tr
                          className=""
                          data-test="loan1"
                        >
                          <TableCell
                            as="td"
                            data-label="Loan request PID"
                            data-test="0-loan1"
                            key="0-loan1"
                          >
                            <td
                              className=""
                              data-label="Loan request PID"
                              data-test="0-loan1"
                            >
                              <Link
                                data-test="loanid-1"
                                to="url/loanid-1"
                              >
                                <LinkAnchor
                                  data-test="loanid-1"
                                  href="/url/loanid-1"
                                  navigate={[Function]}
                                >
                                  <a
                                    data-test="loanid-1"
                                    href="/url/loanid-1"
                                    onClick={[Function]}
                                  >
                                    loanid-1
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Document"
                            data-test="1-loan1"
                            key="1-loan1"
                          >
                            <td
                              className=""
                              data-label="Document"
                              data-test="1-loan1"
                            >
                              <Link
                                data-test="loanid-1"
                                to="url/docid-1"
                              >
                                <LinkAnchor
                                  data-test="loanid-1"
                                  href="/url/docid-1"
                                  navigate={[Function]}
                                >
                                  <a
                                    data-test="loanid-1"
                                    href="/url/docid-1"
                                    onClick={[Function]}
                                  >
                                    <DocumentTitle
                                      metadata={
                                        Object {
                                          "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                                          "abstract": "This is an abstract",
                                          "authors": Array [
                                            Object {
                                              "full_name": "Jack E. Davis",
                                            },
                                          ],
                                          "document_type": "BOOK",
                                          "edition": "1",
                                          "keywords": Object {
                                            "source": "X",
                                            "value": "Patata",
                                          },
                                          "languages": Array [
                                            "en",
                                          ],
                                          "pid": "docid-1",
                                          "publication_year": "1950",
                                          "title": "The Gulf: The Making of An American Sea",
                                        }
                                      }
                                      titleOnly={false}
                                      truncate={false}
                                    >
                                      <div
                                        className="document-title"
                                      >
                                        The Gulf: The Making of An American Sea
                                         
                                        <EditionTitleCmp
                                          metadata={
                                            Object {
                                              "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                                              "abstract": "This is an abstract",
                                              "authors": Array [
                                                Object {
                                                  "full_name": "Jack E. Davis",
                                                },
                                              ],
                                              "document_type": "BOOK",
                                              "edition": "1",
                                              "keywords": Object {
                                                "source": "X",
                                                "value": "Patata",
                                              },
                                              "languages": Array [
                                                "en",
                                              ],
                                              "pid": "docid-1",
                                              "publication_year": "1950",
                                              "title": "The Gulf: The Making of An American Sea",
                                            }
                                          }
                                        >
                                          (
                                          <DocumentEdition
                                            metadata={
                                              Object {
                                                "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                                                "abstract": "This is an abstract",
                                                "authors": Array [
                                                  Object {
                                                    "full_name": "Jack E. Davis",
                                                  },
                                                ],
                                                "document_type": "BOOK",
                                                "edition": "1",
                                                "keywords": Object {
                                                  "source": "X",
                                                  "value": "Patata",
                                                },
                                                "languages": Array [
                                                  "en",
                                                ],
                                                "pid": "docid-1",
                                                "publication_year": "1950",
                                                "title": "The Gulf: The Making of An American Sea",
                                              }
                                            }
                                            withLabel={false}
                                          >
                                            ed. 1
                                          </DocumentEdition>
                                           - 
                                          1950
                                          )
                                        </EditionTitleCmp>
                                      </div>
                                    </DocumentTitle>
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Request interest from"
                            data-test="2-loan1"
                            key="2-loan1"
                          >
                            <td
                              className=""
                              data-label="Request interest from"
                              data-test="2-loan1"
                            >
                              2018-06-28
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Request expires on"
                            data-test="3-loan1"
                            key="3-loan1"
                          >
                            <td
                              className=""
                              data-label="Request expires on"
                              data-test="3-loan1"
                            >
                              2019-06-28
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={4}
                  currentPage={1}
                  paginationComponent={null}
                  seeAllComponent={
                    <SeeAllButton
                      disabled={false}
                      fluid={false}
                      to="/backoffice/loans?q=(patron_pid:2 AND state:(PENDING))"
                    />
                  }
                  showAllResults={false}
                  showMaxRows={1}
                >
                  <TableFooter
                    as="tfoot"
                    data-test="footer"
                    fullWidth={true}
                  >
                    <TableHeader
                      as="tfoot"
                      data-test="footer"
                      fullWidth={true}
                    >
                      <tfoot
                        className="full-width"
                        data-test="footer"
                      >
                        <TableRow
                          as="tr"
                          cellAs="td"
                        >
                          <tr
                            className=""
                          >
                            <TableHeaderCell
                              as="th"
                              colSpan={5}
                              textAlign="right"
                            >
                              <TableCell
                                as="th"
                                className=""
                                colSpan={5}
                                textAlign="right"
                              >
                                <th
                                  className="right aligned"
                                  colSpan={5}
                                >
                                  <span
                                    className="results-table-compact-summary"
                                  >
                                    Showing entries 
                                    1
                                    -
                                    1
                                     of 
                                    2
                                     
                                  </span>
                                  <span>
                                    <SeeAllButton
                                      disabled={false}
                                      fluid={false}
                                      to="/backoffice/loans?q=(patron_pid:2 AND state:(PENDING))"
                                    >
                                      <Button
                                        as={
                                          Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "displayName": "Link",
                                            "propTypes": Object {
                                              "innerRef": [Function],
                                              "onClick": [Function],
                                              "replace": [Function],
                                              "target": [Function],
                                              "to": [Function],
                                            },
                                            "render": [Function],
                                          }
                                        }
                                        disabled={false}
                                        fluid={false}
                                        size="tiny"
                                        to="/backoffice/loans?q=(patron_pid:2 AND state:(PENDING))"
                                      >
                                        <Ref
                                          innerRef={
                                            Object {
                                              "current": <a
                                                class="ui tiny button"
                                                href="/backoffice/loans?q=(patron_pid:2 AND state:(PENDING))"
                                                role="button"
                                              >
                                                See all
                                              </a>,
                                            }
                                          }
                                        >
                                          <RefForward
                                            innerRef={
                                              Object {
                                                "current": <a
                                                  class="ui tiny button"
                                                  href="/backoffice/loans?q=(patron_pid:2 AND state:(PENDING))"
                                                  role="button"
                                                >
                                                  See all
                                                </a>,
                                              }
                                            }
                                          >
                                            <Link
                                              className="ui tiny button"
                                              onClick={[Function]}
                                              role="button"
                                              to="/backoffice/loans?q=(patron_pid:2 AND state:(PENDING))"
                                            >
                                              <LinkAnchor
                                                className="ui tiny button"
                                                href="/backoffice/loans?q=(patron_pid:2 AND state:(PENDING))"
                                                navigate={[Function]}
                                                onClick={[Function]}
                                                role="button"
                                              >
                                                <a
                                                  className="ui tiny button"
                                                  href="/backoffice/loans?q=(patron_pid:2 AND state:(PENDING))"
                                                  onClick={[Function]}
                                                  role="button"
                                                >
                                                  See all
                                                </a>
                                              </LinkAnchor>
                                            </Link>
                                          </RefForward>
                                        </Ref>
                                      </Button>
                                    </SeeAllButton>
                                  </span>
                                  <span />
                                </th>
                              </TableCell>
                            </TableHeaderCell>
                          </tr>
                        </TableRow>
                      </tfoot>
                    </TableHeader>
                  </TableFooter>
                </ResultsTableFooter>
              </table>
            </Table>
          </ResultsTable>
        </Error>
      </Loader>
    </PatronPendingLoans>
  </Router>
</BrowserRouter>
`;
